workspace-sf/force-app/main/default/objects/DependenteGarantia__c/DependenteGarantia__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as regras dos dependentes das garantias</description>
    <label>Dependente da garantia</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependentes da garantia</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>