workspace-sf/force-app/main/default/objects/DependenteGarantia__c/fields/Dependente__c.field-meta.xml
<CustomField>
    <fullName>Dependente__c</fullName>
    <label>Dependente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avós</fullName>
            </value>
            <value>
                <fullName>Bisavós</fullName>
            </value>
            <value>
                <fullName>Bisnetos</fullName>
            </value>
            <value>
                <fullName>Cônjuge</fullName>
            </value>
            <value>
                <fullName>Filhos</fullName>
            </value>
            <value>
                <fullName>Irmãos</fullName>
            </value>
            <value>
                <fullName>Netos</fullName>
            </value>
            <value>
                <fullName>Pais</fullName>
            </value>
            <value>
                <fullName>Sogros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>