workspace-sf/force-app/main/default/objects/DependenteGarantia__c/fields/DependenteGarantia__c.field-meta.xml
<CustomField>
    <fullName>DependenteGarantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependente da garantia</label>
    <referenceTo>DependenteGarantia__c</referenceTo>
    <relationshipLabel>Dependentes da garantia</relationshipLabel>
    <relationshipName>DependentesGarantia</relationshipName>
    <type>Lookup</type>
</CustomField>