workspace-sf/force-app/main/default/objects/DependenteGarantia__c/fields/LimiteIdadeMinimo__c.field-meta.xml
<CustomField>
    <fullName>LimiteIdadeMinimo__c</fullName>
    <label>Limite de idade mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>