workspace-sf/force-app/main/default/objects/DependenteGarantia__c/fields/LimiteSobreCapitalMaximo__c.field-meta.xml
<CustomField>
    <fullName>LimiteSobreCapitalMaximo__c</fullName>
    <label>Limite sobre o capital máximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>