workspace-sf/force-app/main/default/objects/DependenteGarantia__c/fields/LimiteSobreCapitalMinimo__c.field-meta.xml
<CustomField>
    <fullName>LimiteSobreCapitalMinimo__c</fullName>
    <label>Limite sobre o capital mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>