workspace-sf/force-app/main/default/objects/DependenteGarantia__c/validationRules/ValidarLimiteCapitalMaximoTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteCapitalMaximoTecnico</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;, 
    NOT(ISBLANK(LimiteCapitalMaximo__c)), 
    LimiteCapitalMaximo__c &gt; DependenteGarantia__r.LimiteCapitalMaximo__c 
)</errorConditionFormula>
    <errorDisplayField>LimiteCapitalMaximo__c</errorDisplayField>
    <errorMessage>O limite máximo deve respeitar o limite cadastrado no produto técnico</errorMessage>
</ValidationRule>