workspace-sf/force-app/main/default/objects/DependenteGarantia__c/validationRules/ValidarLimiteCapitalMinimoTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteCapitalMinimoTecnico</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;, 
    NOT(ISBLANK(LimiteCapitalMinimo__c)), 
    LimiteCapitalMinimo__c &lt; DependenteGarantia__r.LimiteCapitalMinimo__c 
)</errorConditionFormula>
    <errorDisplayField>LimiteCapitalMinimo__c</errorDisplayField>
    <errorMessage>O limite mínimo deve respeitar o limite cadastrado no produto técnico</errorMessage>
</ValidationRule>