workspace-sf/force-app/main/default/objects/DependenteGarantia__c/validationRules/ValidarLimiteIdadeMaximoTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteIdadeMaximoTecnico</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;, 
    NOT(ISBLANK(LimiteIdadeMaximo__c)), 
    LimiteIdadeMaximo__c &gt; DependenteGarantia__r.LimiteIdadeMaximo__c 
)</errorConditionFormula>
    <errorDisplayField>LimiteIdadeMaximo__c</errorDisplayField>
    <errorMessage>O limite máximo deve respeitar o limite cadastrado no produto técnico</errorMessage>
</ValidationRule>