workspace-sf/force-app/main/default/objects/DependenteGarantia__c/validationRules/ValidarLimiteIdadeMinimoTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteIdadeMinimoTecnico</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;, 
    NOT(ISBLANK(LimiteIdadeMinimo__c)), 
    LimiteIdadeMinimo__c &lt; DependenteGarantia__r.LimiteIdadeMinimo__c 
)</errorConditionFormula>
    <errorDisplayField>LimiteIdadeMinimo__c</errorDisplayField>
    <errorMessage>O limite mínimo deve respeitar o limite cadastrado no produto técnico</errorMessage>
</ValidationRule>