workspace-sf/force-app/main/default/objects/DependenteGarantia__c/validationRules/ValidarLimiteSobreCapitalMaximoTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteSobreCapitalMaximoTecnico</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;, 
    NOT(ISBLANK(LimiteSobreCapitalMaximo__c)), 
    LimiteSobreCapitalMaximo__c &gt; DependenteGarantia__r.LimiteSobreCapitalMaximo__c 
)</errorConditionFormula>
    <errorDisplayField>LimiteSobreCapitalMaximo__c</errorDisplayField>
    <errorMessage>O limite máximo deve respeitar o limite cadastrado no produto técnico</errorMessage>
</ValidationRule>