workspace-sf/force-app/main/default/objects/DependenteGarantia__c/validationRules/ValidarLimiteSobreCapitalMinimoTecnico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteSobreCapitalMinimoTecnico</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;, 
    NOT(ISBLANK(LimiteSobreCapitalMinimo__c)), 
    LimiteSobreCapitalMinimo__c &lt; DependenteGarantia__r.LimiteSobreCapitalMinimo__c 
)</errorConditionFormula>
    <errorDisplayField>LimiteSobreCapitalMinimo__c</errorDisplayField>
    <errorMessage>O limite mínimo deve respeitar o limite cadastrado no produto técnico</errorMessage>
</ValidationRule>